syntax = "proto3";

option go_package = "gs/proto/borrow";
option java_package = "io.grpc.borrow";
option java_outer_classname = "BorrowProto";

package borrow;

// 借还
service Borrow {
  // 借出归还
  rpc OutIn(OutInInfo) returns (Empty) {}

  // 查询用户在借
  //
  // 没有在借时返回编码 NotFound
  rpc QueryUserBorrow (Empty) returns (UserBorrow) {}
}

message Empty {}

// 图书信息
message BookInfo {
  string code = 1; // 编码
  int32 count = 2; // 数量
}

// 用户在借
message UserBorrow {
  string username = 1; // 用户名
  repeated BookInfo books = 2; // 图书信息
}

// 借出归还记录
message OutInInfo {
  string id = 1; // 由服务生成
  string date_text = 2; // 由服务生成, 日期时间, 格式 2024-08-13T14:01:02
  string username = 3; // 由服务设置, 用户名
  string type = 4; // 类型: [借出,归还]
  repeated BookInfo books = 5; // 图书信息
}

